test/files/neg/macro-invalidshape/Impls_1.scala
import scala.reflect.macros.blackbox.Context

object Impls {
  def foo(c: Context)(x: c.Expr[Any]) = ???
}
